--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,3 +2,7 @@
 @import '../styles/partials/mixins';
 @import '../styles/partials/variables';
  
+#app {
+    padding: 50px;
+    background-color: green;
+}
