--- a/src/styles/partials/_base.scss
+++ b/src/styles/partials/_base.scss
@@ -2,3 +2,8 @@ body {
     background-color: black;
     color: white;
 }
+.title {
+    color: red;
+    font-size: 20px;
+    text-align: center;
+}
