--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -7,7 +7,6 @@
 
   height: 50px;
   width: 100%;
-
   padding: 0 20px;
 
   font-family: $logo-font;
@@ -19,4 +18,14 @@
   background: $highlight;
 
   cursor: pointer;
+}
+
+header {
+  position: fixed;
+  top:0;
+  z-index: 1;
+  h1 {
+    margin:0;
+  
+    }
 }
