--- a/components/navBar/navBar.scss
+++ b/components/navBar/navBar.scss
@@ -2,25 +2,25 @@
 
 .NavBar {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
 
-  height: 60px;
   width: 100%;
-  padding: 5px 0;
+  padding: 40px 40px 0;
 
-  background: $primary;
 
   font-family: $core-font;
   font-size: 22px;
   color: $on-primary-light;
 
-  box-shadow: 0px -2px 15px rgba(50, 50, 50, 0.45);
+  position: fixed;
+  top: 0;
 
   a {
     color: inherit;
     text-decoration: none;
-    &:focus {
+    &:focus,
+    &:hover {
       color: $highlight;
     }
   }
