--- a/layouts/layout.scss
+++ b/layouts/layout.scss
@@ -29,27 +29,38 @@ code {
 }
 
 .Layout {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-
   height: 100%;
   width: 100%;
 
   .Content {
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 
+    font-family: $core-font;
+    overflow: hidden;
+    padding: 0;
     width: 100%;
 
-    background: $secondary;
-    color: $on-secondary;
-    font-family: $core-font;
+    .grid-container {
+      display: grid;
+      grid-template-columns: 66% 17%;
+      overflow: hidden;
+      height: 100vh;
+      
+      @media (min-width: 800px) {
+        grid-template-columns: 66% 20%;
+      }
+
+      .featuredIg {
+        background-color: black;
+        overflow: hidden;
+        position: relative;
+      }
+    }
 
     a {
       color: inherit;
     }
+  }
+  footer {
+    padding: 0 40px;
   }
 }
