Featured Image aleatoria

--- a/layouts/layout.scss
+++ b/layouts/layout.scss
@@ -53,6 +53,7 @@ code {
         background-color: black;
         overflow: hidden;
         position: relative;
+        max-height: 100vh;
       }
     }
 
