--- a/components/igFeed/igFeed.scss
+++ b/components/igFeed/igFeed.scss
@@ -3,6 +3,7 @@
     display: grid;
     align-content: center;
     overflow-y: scroll;
+    padding: 0 20px;
 
     .igFeedContainer {
       overflow-y: scroll;
