Intro section redesigned. Fonts added.

--- a/components/navBar/navBar.scss
+++ b/components/navBar/navBar.scss
@@ -8,11 +8,10 @@
   width: 100%;
   padding: 40px 40px 0;
 
-
-  font-family: $core-font;
-  font-size: 22px;
-  color: $on-primary-light;
-
+  font-Family: 'MonumentExtended-UltraBold', sans-serif;
+  font-size: 1.5em;
+  color: white;
+  text-transform: uppercase;
   position: fixed;
   top: 0;
 
