--- a/layouts/layout.scss
+++ b/layouts/layout.scss
@@ -1,4 +1,12 @@
 @import "../theme/theme";
+@font-face {
+  font-family: 'MonumentExtended';
+      src: url('/fonts/MonumentExtended-Regular.otf');
+    }
+@font-face {
+  font-family: 'MonumentExtended-UltraBold';
+      src: url('/fonts/MonumentExtended-UltraBold.otf');
+    }
 * {
   box-sizing: border-box;
 }
@@ -11,9 +19,7 @@ html, body, #__next {
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-  "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-  sans-serif;
+  font-family: 'Work Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
