--- a/components/subscribe/subscribe.scss
+++ b/components/subscribe/subscribe.scss
@@ -1,9 +1,25 @@
 .subscribe {
   bottom:40px;
   position: fixed;
+  .subsButton {
+    background: none;
+    border: none;
+    color: white;
+    font-family: 'MonumentExtended-UltraBold', sans-serif;
+    font-size: 1.5em;
+    margin: 0;
+    padding: 0;
+    text-transform: uppercase;
+    cursor: pointer;
+    &:hover, 
+    &:focus {
+      color:red;
+    }
+  }
   p {
     margin-bottom: 0;
     margin-top: 0;
+    color:white;
   }
 }
 
