--- a/layouts/layout.scss
+++ b/layouts/layout.scss
@@ -5,7 +5,7 @@
     }
 @font-face {
   font-family: 'MonumentExtended-UltraBold';
-      src: url('/fonts/MonumentExtended-Ultrabold.otf');
+      src: url('/fonts/MonumentExtended-UltraBold.otf');
     }
 * {
   box-sizing: border-box;
@@ -23,7 +23,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+img {
+  border:0;
+  vertical-align: middle;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
   monospace;
