--- a/components/subscribe/subscribe.scss
+++ b/components/subscribe/subscribe.scss
@@ -1,10 +1,10 @@
 .subscribe {
   bottom:40px;
+  left: 45px;
   position: fixed;
   .subsButton {
     background: none;
     border: none;
-    color: white;
     font-family: 'MonumentExtended-UltraBold', sans-serif;
     font-size: 1.5em;
     margin: 0;
@@ -19,7 +19,6 @@
   p {
     margin-bottom: 0;
     margin-top: 0;
-    color:white;
   }
 }
 
