--- a/components/infames/infames.scss
+++ b/components/infames/infames.scss
@@ -24,6 +24,15 @@
   }
 }
 
+@keyframes glitch {
+  0%{
+    transform: rotateX(10deg) skewX(90deg);
+  }
+  10%{
+    transform: rotateX(0deg) skewX(0deg);
+  }
+}
+
 @mixin imgGlitch($name, $intensity, $width, $height, $top, $left) {
   
   
@@ -81,7 +90,7 @@
 }
 
 .glitch, .glitch-inner, .glitch-inner-2 {
-  width: 300px;
+  width: 100%;
   height: 300px;
   background-size: cover;
  }
@@ -96,7 +105,7 @@
   left: 0;
   opacity: .5;
   clip: rect(60px, 9999px, 60px, 0);
-  animation: noise-anim 3s infinite step-end;
+    animation: noise-anim 3s infinite step-end,glitch 5s 5s infinite ;
  }
  
  .glitch-inner-2 {
@@ -125,43 +134,15 @@ a.crew-link{
     height: auto;
   }
   .crew-hover-text{
-    @media (min-width: 800px) {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      text-align: center;
-      -ms-transform: translate(-50%,-50%);
-      transform: translate(-50%,-50%);
-      color: #fff;
-      display: block;
-    }
+    display: none;
     .text{
-      @media (min-width: 800px) {
-        position: relative;
-        display: inline-block;
-        vertical-align: top;
-        z-index: 13;
-      }
+      display: none;
 
     }
     .second-text{
-      @media (min-width: 800px) {
-        position: absolute;
-    display: block;
-    bottom: -62px;
-    left: 0;
-    opacity: .6;
-    color: #000;
-    overflow: hidden;
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: #fff;
-    -webkit-text-fill-color: transparent;
-    z-index: 13;
-      }
+      display: none;
       .second-text-inner{
-        position: relative;
-        display: block;
-        top: -38px;
+        display: none;
       }
     }
 
@@ -184,6 +165,7 @@ a:hover{
     transform: translate(-50%,-50%);
     z-index: 12;
     overflow: hidden;
+    width: 80%;
   }
     .crew-hover-img{
     max-width: 300px;
@@ -217,7 +199,7 @@ a:hover{
       @media (min-width: 800px) {
         position: absolute;
         display: block;
-        bottom: -52px;
+        bottom: -50px;
         left: 0;
         opacity: .6;
         color: #000;
@@ -230,7 +212,7 @@ a:hover{
       .second-text-inner{
         position: relative;
         display: block;
-        top: -28px;
+        top: -25px;
         opacity: 1;
         transform: matrix(1, 0, 0, 1, 0, 0);
       }
