--- a/components/youtubePlaylist/youtubePlaylist.scss
+++ b/components/youtubePlaylist/youtubePlaylist.scss
@@ -1,13 +1,14 @@
 .youtubeSection {
     text-align: center;
-    padding:450px 0;
+    padding: 0;
     position:relative;
+    align-items: center;
     h2{
       font-size: 10em;
     }
-    youtubeSubtitle{
+    YoutubeSubtitle{
       left: 0;
-      margin-top: 500px;
+      margin-top: 30vh;
       position: absolute;
       top: 0;
       width: 100%;
