Integration with Firebase

--- a/components/downloads/downloads.scss
+++ b/components/downloads/downloads.scss
@@ -1,5 +1,5 @@
 .downloadSection{
-  margin: 200px 0 200px;
+  margin: 200px 0 0;
   .dowloadWrapper{
     display: grid;
     grid-template-columns: 50% 50%;
