--- a/components/intro/intro.scss
+++ b/components/intro/intro.scss
@@ -1,6 +1,7 @@
 .spinner {
   letter-spacing: 1.2px;
   font-size:0.5em;
+  text-transform: uppercase;
   animation: rotate 30s linear infinite;
   -webkit-animation: rotate 30s linear infinite;
   -moz-animation: rotate 30s linear infinite;
@@ -76,13 +77,14 @@
   align-items: center;
 }
 .featuredWrapper {
-  display: flex
+  display: flex;
+  align-items:center;
 }
 .featured {
   background-image: url('/random/4tokaramazov.jpg');
   background-size: cover;
   height: 60vh;
-  margin: 120px 0 0 125px;
+  margin: 0 0 0 125px;
   position: relative;
   width: 56vh;
 }
@@ -134,7 +136,7 @@
   display: flex;
   justify-content: middle;
   align-items: center;
-  & a {
+  & span {
     color: #fff;
     font-family:'UnifrakturMaguntia', sans-serif;
     font-size: 1.5em;
