--- a/components/subscribe/subscribe.scss
+++ b/components/subscribe/subscribe.scss
@@ -3,20 +3,22 @@
   left: 45px;
   position: fixed;
   .subsButton {
+    color: black;
     background: none;
     border: none;
     font-family: 'MonumentExtended-UltraBold', sans-serif;
-    font-size: 1.5em;
+    font-size: 2em;
     margin: 0;
     padding: 0;
     text-transform: uppercase;
     cursor: pointer;
     &:hover, 
     &:focus {
-      color:red;
+      color:red !important;
     }
   }
   p {
+    color:black;
     margin-bottom: 0;
     margin-top: 0;
   }
