--- a/components/navBar/navBar.scss
+++ b/components/navBar/navBar.scss
@@ -1,7 +1,7 @@
 @import "./../../theme/theme";
 
 .navWrapper {
-
+  color: black;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -10,8 +10,7 @@
   padding: 40px 40px 0;
 
   font-family: 'MonumentExtended-UltraBold', sans-serif;
-  font-size: 1.5em;
-  color: white;
+  font-size: 2em;
   text-transform: uppercase;
   position: fixed;
   top: 0;
@@ -21,12 +20,16 @@
     text-decoration: none;
     &:focus,
     &:hover {
-      color: $highlight;
+      color: $highlight !important;
+      .overlayMenu {
+        display: block;
+        opacity: 1;
+      }
     }
   }
 
   .active {
-    color: $highlight;
+    color: $highlight !important;
   }
   
 }
