--- a/components/rrssBar/rrssBar.scss
+++ b/components/rrssBar/rrssBar.scss
@@ -7,6 +7,7 @@
   text-transform: uppercase;
   top:45vh;
   .rrssItem {
+    color: black;
     font-size:1.2em;
     float:left;
     margin:0;
@@ -14,7 +15,7 @@
     padding:0;
     text-decoration: none;
     &:focus, &:hover {
-      color: red;
+      color: red!important;
     }
     &:last-child {
       margin-right: 0;
