--- a/components/youtubePlaylist/youtubePlaylist.scss
+++ b/components/youtubePlaylist/youtubePlaylist.scss
@@ -6,7 +6,7 @@
     h2{
       font-size: 10em;
     }
-    YoutubeSubtitle{
+    youtubesubtitle{
       left: 0;
       margin-top: 30vh;
       position: absolute;
@@ -22,6 +22,5 @@
   .youtubeWrapper {
     margin:0 auto;
     display: block;
-    z-index: 2;
   }
 }
